--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "A minimal own framework based on Symfony components",
     "type": "project",
     "require": {
-        "symfony/http-foundation": "^5.1"
+        "symfony/http-foundation": "^5.1",
+        "symfony/routing": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2"
