--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,15 @@
     "require-dev": {
         "phpunit/phpunit": "^9.2"
     },
+    "autoload": {
+        "psr-4": {
+            "App\\Controller\\": "src/Controller"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "tests/"
+        }
+    },
     "license": "MIT"
 }
