--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "symfony/http-foundation": "^5.1",
-        "symfony/routing": "^5.1"
+        "symfony/routing": "^5.1",
+        "symfony/http-kernel": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2"
