--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\Controller\\": "src/Controller"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
