--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,18 @@
     "name": "mastermoltra/microsym-framework",
     "description": "A minimal own framework based on Symfony components",
     "type": "project",
+    "support": {
+        "docs": "https://symfony.com/doc/current/create_framework/"
+    },
     "require": {
         "symfony/http-foundation": "^5.1",
         "symfony/routing": "^5.1",
         "symfony/http-kernel": "^5.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "^9.2",
+        "phpstan/phpstan": "^0.12.29",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
@@ -19,6 +24,16 @@
         "psr-4": {
             "Test\\": "tests/"
         }
+    },
+    "scripts": {
+        "test": [
+            "@phpstan",
+            "@phpcs",
+            "@phpunit"
+        ],
+        "phpunit": "phpunit",
+        "phpcs": "phpcs --standard=PSR2 src tests",
+        "phpstan": "phpstan analyse -l 3 src tests"
     },
     "license": "MIT"
 }
