--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         ],
         "phpunit": "phpunit",
         "phpcs": "phpcs --standard=PSR2 src tests",
-        "phpstan": "phpstan analyse -l 3 src tests"
+        "phpstan": "phpstan analyse -l 3 src tests",
+        "phpfixer": "php-cs-fixer fix --config=.php_cs.dist -v"
     },
     "license": "MIT"
 }
