--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "symfony/routing": "^5.1",
         "symfony/http-kernel": "^5.1",
         "symfony/event-dispatcher": "^5.1",
-        "symfony/dependency-injection": "^5.1"
+        "symfony/dependency-injection": "^5.1",
+        "ocramius/proxy-manager": "^2.8",
+        "doctrine/annotations": "^1.10",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2",
